<resources>
    <string name="app_name">Workout Quiz</string>

    <!-- Question 1 and answers -->
    <string name="q1">Q1: What is training frequency?</string>
    <string name="q1a">A. The number of times you exercise in a week</string>
    <string name="q1b">B. The number of times you exercise in a day</string>
    <string name="q1c">C. The number of times you work specific muscle groups in a week</string>
    <string name="q1d">D. The number of times you perform a specific exercise in a week</string>

    <!-- Question 2 and answers -->
    <string name="q2">Q2: What are two common types of cardiovascular exercise?</string>
    <string name="q2a">A. HIIT and Steady State</string>
    <string name="q2b">B. Running and walking</string>
    <string name="q2c">C. Intermissions and lunging</string>
    <string name="q2d">D. Aerobic and High Altitude Training</string>

    <!-- Question 3 and answers -->
    <string name="q3">Q3: What are the three primary energy pathways?</string>
    <string name="q3a">A. Glucose, ATP, Fats</string>
    <string name="q3b">B. Phosphagen, Anaerobic Glycolysis, Aerobic Glycolysis</string>
    <string name="q3c">C. Creatine, Glycolytic oxidation, fat oxidation</string>
    <string name="q3d">D. Lipolysis, Glycolysis, phosphate</string>

    <!-- Question 4 and answers -->
    <string name="q4">Q4: What are the four main movement patterns?</string>
    <string name="q4a">A. Front, Back, Left, Right</string>
    <string name="q4b">B. Up, Down, Front, Back</string>
    <string name="q4c">C. Lift, Sit, Stand, Pull</string>
    <string name="q4d">D. Push, Pull, Bend, Squat</string>

    <!-- Question 5 and answers -->
    <string name="q5">Q5: What are the three anatomical planes?</string>
    <string name="q5a">A. Coronal, Sagittal, Transverse</string>
    <string name="q5b">B. Front, Back, Side</string>
    <string name="q5c">C. Medial, Dorsal, Axial</string>
    <string name="q5d">D. Anterior, Posterior, Frontal</string>

    <!-- Question 6 and answers -->
    <string name="q6">Q6: What muscle are the prime movers in the bench press?</string>
    <string name="q6a">A. Pectorals, Anterior Deltoids</string>
    <string name="q6b">B. Trapezius, Rhomboids</string>
    <string name="q6c">C. Triceps, Serratus Anterior</string>
    <string name="q6d">D. Posterior Deltoids, Latissimus Dorsi</string>

    <!-- Question 7 and answers -->
    <string name="q7">Q7: What exercise below is the MOST compound?</string>
    <string name="q7a">A. Biceps Curl</string>
    <string name="q7b">B. Lateral Raise</string>
    <string name="q7c">C. Deadlift</string>
    <string name="q7d">D. Seated Leg Extension</string>

    <!-- Question 8 and answers -->
    <string name="q8">Q8: What is typically considered the rep range to target MAXIMAL strength?</string>
    <string name="q8a">A. 15+</string>
    <string name="q8b">B. 12–15y</string>
    <string name="q8c">C. 6–10</string>
    <string name="q8d">D. 1–3</string>

    <string name="submit_button">Submit</string>

    <string name="exercise_science">Test Your Exercise Science Knowledge!</string>
    <string name="instructions">Read and answer the questions below. Click Submit at the bottom to see how you did.</string>
</resources>
