<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="frank.quizapp.MainActivity"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<!-- Question 1 text and radio group answers -->
        <TextView
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/question_text_size"
            android:padding="@dimen/radio_button_and_question_padding"
            />

        <RadioGroup
            android:id="@+id/q1_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q1c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q1d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <!-- Question 2 text and radio group answers -->
        <TextView
            android:id="@+id/q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/question_text_size"
            android:padding="@dimen/radio_button_and_question_padding"
            />

        <RadioGroup
            android:id="@+id/q2_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <!-- Question 3 text and radio group answers -->
        <TextView
            android:id="@+id/q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/question_text_size"
            android:padding="@dimen/radio_button_and_question_padding"
            />

        <RadioGroup
            android:id="@+id/q3_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q3c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q3d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <!-- Question 4 text and radio group answers -->
        <TextView
            android:id="@+id/q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/question_text_size"
            android:padding="@dimen/radio_button_and_question_padding"
            />

        <RadioGroup
            android:id="@+id/q4_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <!-- Question 5 text and radio group answers -->
        <TextView
            android:id="@+id/q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/question_text_size"
            android:padding="@dimen/radio_button_and_question_padding"
            />

        <RadioGroup
            android:id="@+id/q5_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q5a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q5b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q5c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q5d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <!-- Question 6 text and radio group answers -->
        <TextView
            android:id="@+id/q6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q6"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/question_text_size"
            android:padding="@dimen/radio_button_and_question_padding"
            />

        <RadioGroup
            android:id="@+id/q6_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q6a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q6b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q6c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q6d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <!-- Question 7 text and radio group answers -->
        <TextView
        android:id="@+id/q7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/q7"
        android:textStyle="bold"
            android:textColor="@color/colorAccent"
        android:textSize="@dimen/question_text_size"
        android:padding="@dimen/radio_button_and_question_padding"
        />

        <RadioGroup
            android:id="@+id/q7_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q7a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q7b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q7c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q7d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q7d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <!-- Question 8 text and radio group answers -->
        <TextView
            android:id="@+id/q8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q8"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/question_text_size"
            android:padding="@dimen/radio_button_and_question_padding"
            />

        <RadioGroup
            android:id="@+id/q8_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/radio_group_padding">

            <RadioButton
                android:id="@+id/q8a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8a"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q8b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8b"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q8c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8c"
                android:padding="@dimen/radio_button_and_question_padding"/>
            <RadioButton
                android:id="@+id/q8d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q8d"
                android:padding="@dimen/radio_button_and_question_padding"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_button"
            android:background="@color/colorAccent"
            android:onClick="submit"
            />
    </LinearLayout>

</ScrollView>
